# mcp_agent_mail_rust

./: .gitignore  Cargo.toml  EXISTING_MCP_AGENT_MAIL_STRUCTURE.md  FEATURE_PARITY.md  PLAN_TO_PORT_MCP_AGENT_MAIL_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  RECOVERY_RUNBOOK.md  SYNC_STRATEGY.md  TODO.md
.beads/: issues.jsonl
benches/: BUDGETS.md
crates/mcp-agent-mail/: Cargo.toml
crates/mcp-agent-mail-cli/: Cargo.toml
crates/mcp-agent-mail-cli/src/: lib.rs  main.rs
crates/mcp-agent-mail-cli/tests/: cli_json_snapshots.rs  share_verify_decrypt.rs
crates/mcp-agent-mail-conformance/: Cargo.toml  storage.sqlite3  storage.sqlite3-shm  storage.sqlite3-wal
crates/mcp-agent-mail-conformance/src/: lib.rs  main.rs
crates/mcp-agent-mail-conformance/tests/: conformance.rs
crates/mcp-agent-mail-conformance/tests/conformance/: README.md
crates/mcp-agent-mail-conformance/tests/conformance/fixtures/: python_reference.json
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/: generate_fixtures.py
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_0c621f0e71c945d390a6893b18c1e111/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_126381d7b0aa45bd99bf21f949260ca1/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_2fdaebc6cef0457096b793aa17472067/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_424ef8117f7040f18f096ac2d44af858/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_4f050a9e9ffa40308f08832c3c270f51/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_5f41a3b7155d4800a59673a8ca4f3f30/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_71c3fd56c025436bbba2694dabbad2b2/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_e43c37bbdd2f4ac7a431de26ef89dd6e/: db.sqlite3
crates/mcp-agent-mail-conformance/tests/conformance/python_reference/_scratch/run_eab7cbdd0f7b4502ab471dbdbbaccf04/: db.sqlite3
crates/mcp-agent-mail-core/: Cargo.toml
crates/mcp-agent-mail-core/src/: config.rs  error.rs  identity.rs  lib.rs  metrics.rs  models.rs
crates/mcp-agent-mail-db/: Cargo.toml
crates/mcp-agent-mail-db/src/: cache.rs  error.rs  lib.rs  models.rs  pool.rs  queries.rs  schema.rs  timestamps.rs  tracking.rs
crates/mcp-agent-mail-db/tests/: stress.rs
crates/mcp-agent-mail-guard/: Cargo.toml
crates/mcp-agent-mail-guard/src/: lib.rs
crates/mcp-agent-mail-server/: Cargo.toml
crates/mcp-agent-mail-server/src/: console.rs  lib.rs  mail_ui.rs  startup_checks.rs  theme.rs  tui_app.rs  tui_bridge.rs  tui_chrome.rs  tui_events.rs  tui_poller.rs
crates/mcp-agent-mail-server/src/tui_screens/: dashboard.rs  inspector.rs  messages.rs  mod.rs  system_health.rs  timeline.rs
crates/mcp-agent-mail-server/tests/: console_output.rs
crates/mcp-agent-mail-server/tests/common/: mod.rs
crates/mcp-agent-mail-share/: Cargo.toml
crates/mcp-agent-mail-share/src/: bundle.rs  finalize.rs  lib.rs  snapshot.rs
crates/mcp-agent-mail-storage/: Cargo.toml
crates/mcp-agent-mail-storage/src/: lib.rs
crates/mcp-agent-mail-storage/tests/fixtures/notifications/: README.md  list_pending_signals_all.json  signal_include_metadata_false.json  signal_include_metadata_true.json
crates/mcp-agent-mail-tools/: Cargo.toml
crates/mcp-agent-mail-tools/src/: build_slots.rs  contacts.rs  identity.rs  lib.rs  llm.rs  macros.rs  messaging.rs  metrics.rs  products.rs  reservations.rs  resources.rs  search.rs
crates/mcp-agent-mail-tools/tests/fixtures/llm/: README.md  env_bridge.json  env_bridge_vectors.json  json_parsing.json  model_selection.json  model_selection_vectors.json  summarize_responses.json  summarize_thread_refine_multi.json  summarize_thread_refine_single.json
crates/mcp-agent-mail/benches/: benchmarks.rs
crates/mcp-agent-mail/src/: main.rs
scripts/: am  e2e_archive.sh  e2e_console.sh  e2e_http.sh  e2e_lib.sh
tests/e2e/: test_archive.sh  test_console.sh  test_http.sh  test_http_streamable.sh  test_jwt.sh  test_llm.sh  test_mail_ui.sh  test_notifications.sh  test_peer_addr.sh  test_rate_limit.sh
tests/fixtures/cli_help/: am_run.txt  amctl.txt  amctl_env.txt  archive.txt  clear_and_reset_everything.txt  docs.txt  docs_insert_blurbs.txt  doctor.txt  doctor_repair.txt  guard.txt  guard_check.txt  migrate.txt  products.txt  projects.txt  projects_adopt.txt  projects_discovery_init.txt  projects_mark_identity.txt  serve_http.txt  serve_stdio.txt  share.txt  share_export.txt  top_level.txt
tests/fixtures/cli_json/: archive_list.json  doctor_check.json  list_projects.json  products_inbox.json  products_search.json  products_status.json
