[package]
name = "mcp-agent-mail-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap = { version = "2", features = ["serde"] }
clap.workspace = true
mcp-agent-mail-server = { path = "../mcp-agent-mail-server" }

[dev-dependencies]
insta = { version = "1.38", features = ["json"] }
fastmcp.workspace = true
fastmcp-core.workspace = true
mcp-agent-mail-core.workspace = true
mcp-agent-mail-storage.workspace = true
tempfile.workspace = true
