[package]
name = "mcp-agent-mail-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database layer for MCP Agent Mail"

[dependencies]
mcp-agent-mail-core = { path = "../mcp-agent-mail-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true

# sqlmodel dependencies
sqlmodel.workspace = true
sqlmodel-core.workspace = true
sqlmodel-query.workspace = true
sqlmodel-schema.workspace = true
sqlmodel-session.workspace = true
sqlmodel-pool.workspace = true
sqlmodel-sqlite.workspace = true

# Async runtime
asupersync.workspace = true

[lints]
workspace = true
