[package]
name = "mcp-agent-mail-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
minijinja.workspace = true
comrak.workspace = true
ammonia.workspace = true
include_dir.workspace = true
ftui.workspace = true
ftui-extras.workspace = true
ftui-runtime = { workspace = true, features = ["stdio-capture"] }
fastmcp.workspace = true
fastmcp-core.workspace = true
fastmcp-protocol.workspace = true
fastmcp-server.workspace = true
fastmcp-transport.workspace = true
chrono.workspace = true
glob.workspace = true
mcp-agent-mail-core = { path = "../mcp-agent-mail-core" }
mcp-agent-mail-db = { path = "../mcp-agent-mail-db" }
mcp-agent-mail-storage = { path = "../mcp-agent-mail-storage" }
mcp-agent-mail-tools = { path = "../mcp-agent-mail-tools" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
