[package]
name = "mcp-agent-mail-share"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
mcp-agent-mail-core = { workspace = true }
