[package]
name = "mcp-agent-mail-share"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
zip.workspace = true
include_dir.workspace = true
mcp-agent-mail-core = { workspace = true }
sqlmodel-sqlite.workspace = true
sqlmodel-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
