[package]
name = "mcp-agent-mail-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
asupersync.workspace = true
git2 = "0.19"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
thiserror.workspace = true
mcp-agent-mail-core = { path = "../mcp-agent-mail-core" }

[dev-dependencies]
tempfile = "3"
